NTU-738 Clean up code