@@ -10,7 +10,7 @@ import java.util.ArrayList;
 import static org.junit.jupiter.api.Assertions.*;
 import static se.skltp.takcache.util.VagvalSchemasTestUtil.*;
 
-public class VagvalHandlerTest {
+class VagvalHandlerTest {
     private static final String ADDRESS_1 = "address-1";
     private static final String ADDRESS_2 = "address-2";
     private static final String RIV20 = "RIVTABP20";
@@ -22,7 +22,7 @@ public class VagvalHandlerTest {
 
 
     @Test
-    public void testRoutingOnRivVersions() throws Exception {
+    void testRoutingOnRivVersions() throws Exception {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV20, NAMNRYMD_1, RECEIVER_1));
@@ -35,7 +35,7 @@ public class VagvalHandlerTest {
 
 
     @Test
-    public void testRoutingOnNameSpace() throws Exception {
+    void testRoutingOnNameSpace() throws Exception {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1));
@@ -47,7 +47,7 @@ public class VagvalHandlerTest {
     }
 
     @Test
-    public void testRoutingOnReceiver() throws Exception {
+    void testRoutingOnReceiver() throws Exception {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1));
@@ -59,7 +59,7 @@ public class VagvalHandlerTest {
     }
 
     @Test
-    public void testNoMatch() throws Exception {
+    void testNoMatch() {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1));
@@ -72,7 +72,7 @@ public class VagvalHandlerTest {
     }
 
     @Test
-    public void testNoMatchingRivVersion() throws Exception {
+    void testNoMatchingRivVersion() {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1));
@@ -87,7 +87,7 @@ public class VagvalHandlerTest {
     }
 
     @Test
-    public void testMultipleMatches() throws Exception {
+    void testMultipleMatches() {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1));
@@ -101,7 +101,7 @@ public class VagvalHandlerTest {
     }
 
     @Test
-    public void testNoMatchOnValidDates() throws Exception {
+    void testNoMatchOnValidDates() {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1, getRelativeDate(TWO_HOURS_AGO), getRelativeDate(AN_HOUR_AGO)));
@@ -115,7 +115,7 @@ public class VagvalHandlerTest {
     }
 
     @Test
-    public void testGetRoutingProfiles() throws Exception {
+    void testGetRoutingProfiles() {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1, getRelativeDate(TWO_HOURS_AGO), getRelativeDate(AN_HOUR_AGO)));
@@ -127,7 +127,7 @@ public class VagvalHandlerTest {
         VagvalHandler vagvalHandler = new VagvalHandler(routing);
         assertEquals( 0, vagvalHandler.getRoutingRivProfiles(NAMNRYMD_1, RECEIVER_1).size());
         assertEquals( 1, vagvalHandler.getRoutingRivProfiles(NAMNRYMD_1, RECEIVER_2).size());
-        assertEquals( RIV21, vagvalHandler.getRoutingRivProfiles(NAMNRYMD_1, RECEIVER_2).get(0));
+        assertEquals( RIV21, vagvalHandler.getRoutingRivProfiles(NAMNRYMD_1, RECEIVER_2).getFirst());
         assertEquals( 2, vagvalHandler.getRoutingRivProfiles(NAMNRYMD_2, RECEIVER_2).size());
     }
 
